--- a/includes/style.css
+++ b/includes/style.css
@@ -96,10 +96,14 @@ body::before {
 }
 .hero-text
 {
-  font-size: 4.5rem;
+  font-size: 4rem;
   font-weight: 700;
-  padding-top: 6rem;
-
+  padding-top: 3rem;
+}
+.sub-hero-text
+{
+  font-size: 3rem;
+  font-weight: 500;
 }
 .subscribe{
     width: 100%;
@@ -256,8 +260,12 @@ a {
     /* For mobile phones: */
     .hero-text
     {
-        font-size: 3.6rem;
-        padding-top: 2.7rem;
+        font-size: 2.7rem;
+        padding-top: 0.1rem;
+    }
+    .sub-hero-text
+    {
+        font-size: 2rem;
     }
     .app-hero-text
     {
