--- a/includes/navbar.css
+++ b/includes/navbar.css
@@ -22,6 +22,10 @@ a {
 .logo {
     font-size: 1.3em;
 }
+.footer-title {
+    font-size: 2em;
+}
+
 .link{
-    font-size: 1.1em;
+    font-size: 1.2em;
 }
