--- a/includes/style.css
+++ b/includes/style.css
@@ -118,6 +118,14 @@ body::before {
 
 }
 
+.verse-hero-text
+{
+  font-size: 4.5rem;
+  font-weight: 700;
+  padding-top: 5rem;
+
+}
+
 .intro-text{
     font-size: 2.4em;
 }
@@ -231,6 +239,11 @@ a {
 {
     background: url(images/music.jpg);
 }
+#versespagebg
+{
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), 
+    url(images/verse.jpg);
+}
 #musicontents
 {
     display: flex;
@@ -278,6 +291,11 @@ a {
         padding-top: 2.7rem;
     }
     .services-hero-text
+    {
+        font-size: 3.6rem;
+        padding-top: 5rem;
+    }
+    .verse-hero-text
     {
         font-size: 3.6rem;
         padding-top: 5rem;
